Sat Feb 26 17:12:35 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/request.rb, test/test_request.rb, wee/pageless/request.rb,
	  wee/session.rb, wee/pageless/session.rb,
	  wee/renderer/html/canvas.rb, wee/renderer/html/brushes.rb:

	  - request delimeter changed to /___/ (looks nicer)

	  - refactored Request#build_url, which now takes a hash and
	    remembers already specified values

	  - A Request knows now itself whether it's a action or a render 
	    request.

	  - added Request#info attribute. This is a part of the URL that you
	    can use for your own purposes. It is remembered across requests
	    unless you overwrite its value.

Sat Feb 26 14:22:34 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* wee/core/presenter.rb, wee/session.rb, wee/application.rb: renamed @properties to @__properties

	* wee/core/component.rb: rename @children to @__children

	* wee/core/component.rb, wee/core/valueholder.rb: rename @decoration
	  to @__decoration

--------------------------------------------------------------------
TAGGED 0.7.0
--------------------------------------------------------------------

Tue Feb  1 19:58:08 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* SelectListTag (r.select_list): NON-backwards-compatible change!!!
	  If it's NOT a multiple select list, then the callback is called
	  with the choosen value (instead of an array of one element). Method
	  #selected requires a single value in the same way. No changes if it's
	  a multiple-select list!

	* minor refactoring of OgScaffolder (added support for Date type).

--------------------------------------------------------------------
TAGGED 0.6.0
--------------------------------------------------------------------

Sat Jan 29 19:06:12 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* Added ERB-templating. Example:

	    # file: ~/components/main.rb
	    class Test < Wee::Component

	      # use template '~/components/main.tpl'
	      template :render
